--- a/Netcell/templates/Netcell/netcell.html
+++ b/Netcell/templates/Netcell/netcell.html
@@ -164,7 +164,7 @@
         <div class="row">
           <h3>Tabular Files</h3>
           <div class="col-sm-6">
-            <h4>Cell expression</h4>
+            <h4>Cell Expression</h4>
             <label class="btn btn-default">
               <span class="glyphicon glyphicon-open" style="vertical-align: middle;"></span>
               Upload <input type="file" id="files-cellexp" name="files[]" style="display:none;"/>
@@ -195,7 +195,7 @@
 
           </div>
           <div class="col-sm-6">
-            <h5>ColData conditions names</h5>
+            <h5>ColData condition names</h5>
             <input type="text" placeholder="clusters" class="form-control" id="cluster-name">
             <input type="text" placeholder="cond1" class="form-control" id="cond1-name">
             <input type="text" placeholder="cond2" class="form-control" id="cond2-name">
