Celltype dropdown now dynamic

--- a/Netcell/templates/Netcell/netcell.html
+++ b/Netcell/templates/Netcell/netcell.html
@@ -78,16 +78,13 @@
               <br>
               <!-- Cell Type -->
               <h4>Select Cell Type</h4>
-              <div class="dropdown">
+              <div id="celltype-dropdown" class="dropdown">
                 <button class="btn btn-default dropdown-toggle cn-celltype" type="button" data-toggle="dropdown">
                   Cell Type
                   <span class="caret"></span>
                 </button>
-                <ul class="dropdown-menu cn-celltype-dropdown">
+                <ul id="celltype-dropdown-ul"  class="dropdown-menu cn-celltype-dropdown">
                   <!-- This will be filled by Query -->
-                  <li><a href="#">NeoBlasts</a></li>
-                  <li><a href="#">Muscle</a></li>
-                  <li><a href="#">Neural</a></li>
                 </ul>
               </div> <!-- dropdown -->
             </div> <!-- cn-celltype-select-->
