Dropdown for conditions

--- a/Netcell/templates/Netcell/netcell.html
+++ b/Netcell/templates/Netcell/netcell.html
@@ -75,18 +75,39 @@
               More About Experiment
             </div>
             <div class="cn-celltype-select">
+
+              <div class="dropdown cn-condition-dropdown-container0">
+                <h4><span class="condition-name0"></span></h4>
+
+                  <button class="btn btn-default dropdown-toggle cn-celltype" type="button" data-toggle="dropdown">
+                    <span class="condition-name0"></span>
+                  </button>
+                  <ul id="dropdown-ul-condition0"  class="dropdown-menu cn-celltype-dropdown">
+                    <!-- This will be filled by Query -->
+                  </ul>
+
+              </div>
+              <div class="dropdown cn-condition-dropdown-container1">
+                <h4><span class="condition-name1"></span></h4>
+                  <button class="btn btn-default dropdown-toggle cn-celltype" type="button" data-toggle="dropdown">
+                    <span class="condition-name1"></span>
+                  </button>
+                  <ul id="dropdown-ul-condition1"  class="dropdown-menu cn-celltype-dropdown">
+                    <!-- This will be filled by Query -->
+                  </ul>
+              </div>
+              <div class="dropdown cn-condition-dropdown-container2">
+                <h4><span class="condition-name2"></span></h4>
+                  <button class="btn btn-default dropdown-toggle cn-celltype" type="button" data-toggle="dropdown">
+                    <span class="condition-name2"></span>
+                  </button>
+                  <ul id="dropdown-ul-condition2"  class="dropdown-menu cn-celltype-dropdown">
+                    <!-- This will be filled by Query -->
+                  </ul>
+              </div>
               <br>
               <!-- Cell Type -->
-              <h4>Select Cell Type</h4>
-              <div id="celltype-dropdown" class="dropdown">
-                <button class="btn btn-default dropdown-toggle cn-celltype" type="button" data-toggle="dropdown">
-                  Cell Type
-                  <span class="caret"></span>
-                </button>
-                <ul id="celltype-dropdown-ul"  class="dropdown-menu cn-celltype-dropdown">
-                  <!-- This will be filled by Query -->
-                </ul>
-              </div> <!-- dropdown -->
+
             </div> <!-- cn-celltype-select-->
 
 
