Bug fix: now condition filters hidden by default

--- a/Netcell/templates/Netcell/netcell.html
+++ b/Netcell/templates/Netcell/netcell.html
@@ -76,7 +76,7 @@
             </div>
             <div class="cn-celltype-select">
 
-              <div class="dropdown cn-condition-dropdown-container0">
+              <div class="dropdown cn-condition-dropdown-container cn-condition-dropdown-container0">
                 <h4><span class="condition-name0"></span></h4>
 
                   <button class="btn btn-default dropdown-toggle cn-celltype" type="button" data-toggle="dropdown">
@@ -87,7 +87,7 @@
                   </ul>
 
               </div>
-              <div class="dropdown cn-condition-dropdown-container1">
+              <div class="dropdown cn-condition-dropdown-container cn-condition-dropdown-container1">
                 <h4><span class="condition-name1"></span></h4>
                   <button class="btn btn-default dropdown-toggle cn-celltype" type="button" data-toggle="dropdown">
                     <span class="condition-name1"></span>
@@ -96,7 +96,7 @@
                     <!-- This will be filled by Query -->
                   </ul>
               </div>
-              <div class="dropdown cn-condition-dropdown-container2">
+              <div class="dropdown cn-condition-dropdown-container cn-condition-dropdown-container2">
                 <h4><span class="condition-name2"></span></h4>
                   <button class="btn btn-default dropdown-toggle cn-celltype" type="button" data-toggle="dropdown">
                     <span class="condition-name2"></span>
