--- a/NetExplorer/static/css/style.css
+++ b/NetExplorer/static/css/style.css
@@ -644,7 +644,7 @@ h1, h2, h3, h4, h5, h6 {
 #loading {
     position: fixed;
     display: none;
-    margin-top: 10px;
+    margin-top: 50px;
     right: 25%;
     width: 150px;
     z-index: 10000000000;
@@ -653,15 +653,15 @@ h1, h2, h3, h4, h5, h6 {
 .loading-img {
     position: absolute;
     top: 0;
-    z-index: 2;
+    z-index: 200;
     width: 150px;
 }
 
 .loading-background {
     position: absolute;
-    opacity: 0.65;
+    opacity: 1;
     top: 0;
-    z-index: 1;
+    z-index: 100;
     width: 150px;
 }
 
@@ -1925,8 +1925,8 @@ kbd {
   width: 100%;
 }
 
-.slider.slider-horizontal{
-  width:100% !important; /* sample value - set it as you like*/
+.card-overlay .slider.slider-horizontal{
+  width:90% !important; /* sample value - set it as you like*/
 }
 
 .card-overlay-netcell-aboutexp .slider-handle {
