--- a/Netcell/templates/Netcell/netcell.html
+++ b/Netcell/templates/Netcell/netcell.html
@@ -18,6 +18,7 @@
   <body>
 
     <div class="cn-content">
+      <div id="loading"><img class="loading-img" src="{% static 'Images/loading-pathfinder.gif' %}"/><img src="{% static 'Images/loading-background.png' %}" class="loading-background"/></div>
       <div id="exp-name-label" class="exp-name-label">EXP1</div>
 
       <div class="row">
@@ -319,8 +320,8 @@
     <script src="{% static 'js/jquery-min.js' %}"></script>
     <script src="{% static 'js/cytoscape.js' %}"></script>
     <script src="{% static 'js/netcell-cytoscape-definition.js' %}"></script>
-    <script src="{% static 'js/jquery-ui-all.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'js/jquery-ui-all.min.js' %}"></script>
     <script src="{% static 'js/bootstrap-slider.js' %}"></script>
     <script src="{% static 'js/netcell.js' %}"></script>
     <script src="{% static 'js/card-overlay.js' %}"></script>
