--- a/Netcell/templates/Netcell/netcell.html
+++ b/Netcell/templates/Netcell/netcell.html
@@ -23,9 +23,16 @@
         <div id="exp-name-label" class="exp-name-label">
           EXP1
         </div>
-        <div class="btn" id="delete-exp"><span class="glyphicon glyphicon-trash"></span></div>
+        <div class="btn" id="delete-exp"><span class="delete-exp-icon glyphicon glyphicon-trash"></span></div>
       </div>
-
+      <div id="search-cell">
+        <div class="input-group">
+          <input type="text" id="genename-graph" class="form-control" placeholder="Search Cell" name="search">
+          <div class="input-group-btn">
+            <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+          </div>
+        </div>
+      </div>
       <div class="row">
         <div id="cyt" class="col-sm-9 cn-graph"></div>
         <div class="col-sm-3 cn-controls">
@@ -193,8 +200,8 @@
               <span class="glyphicon glyphicon-open" style="vertical-align: middle;"></span>
               Upload <input type="file" id="files-cellexp" name="files[]" style="display:none;"/>
             </label>
-            <span id="files-cellexp-ok" class="glyphicon glyphicon-ok"></span>
-            <span id="files-cellexp-notok" class="glyphicon glyphicon-remove"></span>
+            <span id="files-cellexp-ok" class="upload-tick glyphicon glyphicon-ok"></span>
+            <span id="files-cellexp-notok" class="upload-tick glyphicon glyphicon-remove"></span>
           </div>
           <div class="col-sm-6">
             <h4>Cell Clustering</h4>
@@ -202,8 +209,8 @@
               <span class="glyphicon glyphicon-open" style="vertical-align: middle;"></span>
               Upload <input type="file" id="files-cellclust" name="files[]" style="display:none;"/>
             </label>
-            <span id="files-cellclust-ok" class="glyphicon glyphicon-ok"></span>
-            <span id="files-cellclust-notok" class="glyphicon glyphicon-remove"></span>
+            <span id="files-cellclust-ok" class="upload-tick glyphicon glyphicon-ok"></span>
+            <span id="files-cellclust-notok" class="upload-tick glyphicon glyphicon-remove"></span>
           </div>
         </div>
         <br><hr><br>
@@ -214,8 +221,8 @@
               <span class="glyphicon glyphicon-open" style="vertical-align: middle;"></span>
               Upload <input type="file" id="files-sce" name="files[]" style="display:none;"/>
             </label>
-            <span id="files-sce-ok" class="glyphicon glyphicon-ok"></span>
-            <span id="files-sce-notok" class="glyphicon glyphicon-remove"></span>
+            <span id="files-sce-ok" class="upload-tick glyphicon glyphicon-ok"></span>
+            <span id="files-sce-notok" class="upload-tick glyphicon glyphicon-remove"></span>
 
           </div>
           <div class="col-sm-6">
