--- a/NetExplorer/templates/NetExplorer/netexplorer.html
+++ b/NetExplorer/templates/NetExplorer/netexplorer.html
@@ -47,6 +47,15 @@
         </div>
         {% endif %}
 
+        <!-- SEARCH BAR -->
+        <div id="search-netexplorer">
+          <div class="input-group">
+            <input type="text" id="genename-graph" class="form-control" placeholder="Search Gene" name="search">
+            <div class="input-group-btn">
+              <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+            </div>
+          </div>
+        </div>
 
         <!-- CYTOSCAPE DIV -->
         <div id="cyt">
