--- a/NetExplorer/static/css/style.css
+++ b/NetExplorer/static/css/style.css
@@ -1990,3 +1990,17 @@ kbd {
   z-index: 2;
 
 }
+
+#genename-graph {
+    height: 40px !important;
+}
+
+#search-netexplorer-btn {
+    height: 40px !important;
+    margin-top: -5px;
+}
+
+#removesearch {
+    height: 40px !important;
+    margin-top: -5px;
+}
