--- a/NetExplorer/templates/NetExplorer/netexplorer.html
+++ b/NetExplorer/templates/NetExplorer/netexplorer.html
@@ -50,9 +50,14 @@
         <!-- SEARCH BAR -->
         <div id="search-netexplorer">
           <div class="input-group">
-            <input type="text" id="genename-graph" class="form-control" placeholder="Search Gene" name="search">
+             <input type="text" id="genename-graph" class="form-control" placeholder="Search Gene" name="search">
             <div class="input-group-btn">
-              <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+              <a class="info-tooltip" title="Search and highlight gene on graph">
+                  <button id="search-netexplorer-btn" class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+              </a>
+              <a class="info-tooltip" title="Remove highlight">
+                  <button id="removesearch" class="btn btn-default"> <span class="glyphicon glyphicon-remove"></span></button>
+              </a>
             </div>
           </div>
         </div>
