Search-node separated
Conflicts:
	NetExplorer/static/js/netexplorer-cytoscape.js

--- a/NetExplorer/templates/NetExplorer/netexplorer.html
+++ b/NetExplorer/templates/NetExplorer/netexplorer.html
@@ -640,6 +640,7 @@
         <script src="{% static 'js/netexplorer-addnode.js' %}"></script>
         <script src="{% static 'js/netexplorer-cytoscape.js' %}"></script>
         <script src="{% static 'js/netexplorer-showconnections.js' %}"></script>
+        <script src="{% static 'js/search-node.js' %}"></script>
         <script src="{% static 'js/jquery_cookie.js' %}"></script>
         <script src="{% static 'js/bootstrap.min.js' %}"></script>
         <script src="{% static 'js/jquery-ui-all.min.js' %}"></script>
