--- a/Netcell/templates/Netcell/netcell.html
+++ b/Netcell/templates/Netcell/netcell.html
@@ -17,6 +17,20 @@
   </head>
 
   <body>
+      <!-- SEARCH BAR -->
+      <div id="search-netexplorer">
+          <div class="input-group">
+              <input type="text" id="genename-graph" class="form-control" placeholder="Search Gene" name="search">
+              <div class="input-group-btn">
+                  <a class="info-tooltip" title="Search and highlight gene on graph">
+                      <button id="search-netexplorer-btn" class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                  </a>
+                  <a class="info-tooltip" title="Remove highlight">
+                      <button id="removesearch" class="btn btn-default"> <span class="glyphicon glyphicon-remove"></span></button>
+                  </a>
+              </div>
+          </div>
+      </div>
 
     <div class="cn-content">
       <div id="loading"><img class="loading-img" src="{% static 'Images/loading-pathfinder.gif' %}"/><img src="{% static 'Images/loading-background.png' %}" class="loading-background"/></div>
