--- a/Netcell/templates/Netcell/netcell.html
+++ b/Netcell/templates/Netcell/netcell.html
@@ -40,14 +40,6 @@
         </div>
         <div class="btn" id="delete-exp"><span class="delete-exp-icon glyphicon glyphicon-trash"></span></div>
       </div>
-      <div id="search-cell">
-        <div class="input-group">
-          <input type="text" id="genename-graph" class="form-control" placeholder="Search Cell" name="search">
-          <div class="input-group-btn">
-            <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-          </div>
-        </div>
-      </div>
       <div class="row">
         <div id="cyt" class="col-sm-9 cn-graph"></div>
         <div class="col-sm-3 cn-controls">
@@ -353,6 +345,7 @@
     <script src="{% static 'js/bootstrap-slider.js' %}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/js/bootstrap-select.min.js"></script>
     <script src="{% static 'js/netcell.js' %}"></script>
+    <script src="{% static 'js/search-node.js' %}"></script>
     <script src="{% static 'js/card-overlay.js' %}"></script>
     <script src="{% static 'js/plotly-latest.min.js' %}"></script>
     <script src="{% static 'js/tinygradient.min.js' %}"></script>
