--- a/Netcell/templates/Netcell/netcell.html
+++ b/Netcell/templates/Netcell/netcell.html
@@ -18,7 +18,7 @@
 
   <body>
       <!-- SEARCH BAR -->
-      <div id="search-netexplorer">
+      <div id="search-netcell">
           <div class="input-group">
               <input type="text" id="genename-graph" class="form-control" placeholder="Search Gene" name="search">
               <div class="input-group-btn">
