--- a/NetExplorer/templates/NetExplorer/netexplorer.html
+++ b/NetExplorer/templates/NetExplorer/netexplorer.html
@@ -281,9 +281,12 @@
 
         <!-- CYTOSCAPE CONTROLS -->
         <div id="cyt-controls">
+            <div class="user-in-controls">
+                {% if user.is_authenticated %}
+                    <a href="{% url account %}"><span class="glyphicon glyphicon-user"></span> {{ user.username }}</a>
+                {% endif %}
+            </div>
             <div id="cyt-controls-header">
-
-
                 <div class="back-div">
                     <a href="{% url index_view %}" class="info-tooltip"
                     title="Back to PlanNET"><span class="glyphicon glyphicon-home"></span></a>
