CellList now lists conditions

--- a/Netcell/templates/Netcell/netcell.html
+++ b/Netcell/templates/Netcell/netcell.html
@@ -447,6 +447,9 @@
       <table id="celllist-table">
           <thead>
               <th>Cell Id</th>
+              <th id="th-condition0">Condition-1</th>
+              <th id="th-condition1">Condition-2</th>
+              <th id="th-condition2">Condition-3</th>
           </thead>
       </table>
     </div>
