Small changes to style

--- a/Netcell/templates/Netcell/netcell.html
+++ b/Netcell/templates/Netcell/netcell.html
@@ -104,7 +104,7 @@
             <!-- ABOUT EXPERIMENT BUTTON -->
             <div id="aboutexp-btn" class="btn btn-default exp-btns">
               <span class="glyphicon glyphicon-info-sign"></span>
-              More About Experiment
+              tSNE Plot
           </div><br>
             <div id="gene-list-btn" class="btn btn-default exp-btns">
                 <span class="glyphicon glyphicon-info-sign"></span>
@@ -425,7 +425,7 @@
         </div>
     </div>
     <div class="card-overlay card-overlay-netcell-genelist" id="card-overlay">
-      <h4>Gene List</h4>
+      <h2>Gene List</h2>
       <hr><br>
         <table id="genelist-table">
             <thead>
@@ -442,7 +442,7 @@
         </div>
     </div>
     <div class="card-overlay card-overlay-netcell-celllist" id="card-overlay">
-      <h4>Cell List</h4>
+      <h2>Cell List</h2>
       <hr><br>
       <table id="celllist-table">
           <thead>
