Cell Clust file now has header, filling cond_names with it.

--- a/Netcell/templates/Netcell/netcell.html
+++ b/Netcell/templates/Netcell/netcell.html
@@ -256,10 +256,17 @@
                             </tr>
                         </table>
                         <br>
-                 <li>Cell Clustering file: Cells on rows, each column a condition for said cells.</li>
+                 <li>Cell Clustering/Conditions file: Cells on rows, each column a condition for said cells.</li>
 
                          e.g:
                          <table>
+                              <tr>
+                                 <td>CellId</td>
+                                 <td> &nbsp;&nbsp;  </td>
+                                 <td>Cluster</td>
+                                 <td> &nbsp;&nbsp;  </td>
+                                 <td>Condition1</td>
+                             </tr>
                              <tr>
                                  <td>c1</td>
                                  <td> &nbsp;&nbsp;  </td>
